# piptable

./: .gitignore  Cargo.toml  README.md  SPREADSHEET_ARCHITECTURE.md  rustfmt.toml  test_html.pip  test_html_import.pip
.githooks/: README.md  pre-push
.github/workflows/: ci.yml  docs.yml
benches/: formula_bench.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: ast.rs  boundary.rs  error.rs  lib.rs  value.rs
crates/core/tests/: value.rs
crates/dag/: Cargo.toml
crates/dag/src/: lib.rs
crates/dag/tests/: dag.rs
crates/formatting/: Cargo.toml
crates/formatting/src/: lib.rs  ssf.rs
crates/formulas/: Cargo.toml
crates/formulas/src/: functions.rs  lib.rs  parser.rs  refs.rs  utils.rs
crates/formulas/tests/: engine.rs
crates/http/: Cargo.toml
crates/http/src/: lib.rs
crates/interpreter/: Cargo.toml
crates/interpreter/src/: book_conversions.rs  converters.rs  formula.rs  io.rs  lib.rs  python.rs  sheet_conversions.rs  sql_builder.rs  wasm_support.rs
crates/interpreter/src/builtins/: array.rs  book.rs  core.rs  lookup.rs  math.rs  mod.rs  sheet.rs  string.rs
crates/interpreter/tests/: _common.rs  arithmetic.rs  book.rs  builtins.rs  collections.rs  common_impl.txt  comparisons.rs  control_flow.rs  data_quality.rs  edge_cases.rs  errors.rs  formulas.rs  functions.rs  http.rs  integration.rs  named_access.rs  sheet_conversions.rs  sql.rs  strings.rs  test_append_export.rs  test_filter.rs  test_html_import.rs  test_lambda.rs  test_lookup.rs  test_lookup_basic.rs  variables.rs
crates/interpreter/tests/common/: mod.rs
crates/markdown/: Cargo.toml
crates/markdown/src/: error.rs  lib.rs  table.rs
crates/markdown/tests/: comprehensive.rs  table_import.rs
crates/parser/: Cargo.toml
crates/parser/src/: builder.rs  grammar.pest  lib.rs
crates/pdf/: Cargo.toml  README.md
crates/pdf/src/: detector.rs  error.rs  extractor.rs  lib.rs  ocr.rs  structure.rs
crates/pdf/tests/: pdf_tests.rs
crates/piptable-formulas/: Cargo.toml
crates/piptable-formulas/src/: functions.rs  lib.rs  parser.rs
crates/piptable-primitives/: Cargo.toml
crates/piptable-primitives/src/: boundary.rs  lib.rs  toon.rs
crates/piptable-types/src/: lib.rs
crates/piptable-utils/: Cargo.toml
crates/piptable-utils/src/: datetime.rs  formatting.rs  lib.rs
crates/piptable-wasm/: Cargo.toml
crates/piptable-wasm/js/: spreadsheet-helpers.js
crates/piptable-wasm/src/: lib.rs  spreadsheet.rs
crates/piptable-wasm/tests/: spreadsheet.rs
crates/primitives/: Cargo.toml
crates/primitives/src/: address.rs  lib.rs
crates/primitives/tests/: address.rs
crates/python/: Cargo.toml  README.md  build.rs  pyproject.toml
crates/python/python/piptable/: __init__.py  __init__.pyi
crates/python/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/sheet/: Cargo.toml
crates/sheet/examples/: formula_demo.rs  sheet_demo.rs
crates/sheet/src/: a1_notation.rs  book.rs  cell.rs  csv.rs  error.rs  html.rs  json.rs  lib.rs  parquet.rs  sheet.rs  toon.rs  xlsx.rs
crates/sheet/tests/: data_quality.rs  formulas.rs  integration.rs  test_cell_access.rs
crates/sheet/tests/fixtures/: sample.xls
crates/sql/: Cargo.toml
crates/sql/src/: lib.rs
crates/types/: Cargo.toml
crates/types/src/: ast.rs
crates/utils/: Cargo.toml
crates/utils/src/: address.rs  cell_data.rs  datetime.rs  formatting.rs  lib.rs  math.rs
crates/viz/: Cargo.toml
crates/viz/src/: lib.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs  spreadsheet.rs
crates/wasm/tests/: spreadsheet.rs
docs/: .gitignore  PDF_COOKBOOK.md  PDF_DOCUMENTATION_SUMMARY.md  PDF_DSL.md  PDF_ROADMAP.md  book.toml  examples.md  formula-parity-matrix.md  parameter-validation.md
docs/decisions/: 2026-01-22-sheet-book-module.md
docs/playground/: .gitignore  PDF_EXAMPLES.md  README.md  embed.html  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
docs/playground/src/: App.tsx  embed-generator.ts  embed.tsx  globals.css  main.ts  store.ts  styles.css
docs/playground/src/components/: EmbedPlayground.tsx  ExportButton.tsx  SaveLoadButton.tsx  ShareButton.tsx
docs/playground/src/lib/: export.ts  gist.ts  share.ts  storage.ts
docs/playground/src/store/: index.ts  playground.ts  wasm.ts
docs/playground/src/wasm/: package.json  piptable_wasm.d.ts  piptable_wasm.js  piptable_wasm_bg.wasm  piptable_wasm_bg.wasm.d.ts
docs/preprocessor/: playground-embed.js
docs/specs/: dag.md  toon-formula-schema.md  toon-formula-schema.toon  utils.md
docs/src/: README.md  SUMMARY.md  playground.md
docs/src/cookbook/: csv.md  data-processing.md  etl.md  excel.md  formulas.md  joins.md  json.md  markdown.md  pdf.md  python.md  sheet-rust-api.md  toon.md
docs/src/dev/: contributing.md  parameter-examples.md  parameter-performance.md  parameter-validation.md
docs/src/guide/: control-flow.md  core-concepts.md  data-structures.md  first-script.md  functions.md  getting-started.md  installation.md  joins.md  quick-start.md  variables-types.md
docs/src/reference/: PLANNED_FEATURES.md
docs/src/reference/api/: README.md  ast.md  book.md  formats.md  functions.md  sheet.md  sheet_advanced.md  sheet_dsl_integration.md
docs/src/reference/dsl/: README.md  append-upsert.md  ask.md  expressions.md  fetch.md  import-export.md  joins.md  operators.md  statements.md
docs/src/specs/: sheetxl-reference.md  toon-formula-boundary.md  toon-formula-boundary.toon
examples/: basics.pip  fibonacci.pip  fizzbuzz.pip  formula_cookbook.rs  formula_playground.rs  formulas.pip  lambda_examples.pip  sample_table.pip  sheet_demo.rs  test_data.html
scripts/: clippy.sh  setup-hooks.sh
todos/: markdown.md  pdf.md
