[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/parser",
    "crates/sql",
    "crates/http",
    "crates/interpreter",
    "crates/viz",
    "crates/cli",
    "crates/server",
    "crates/sheet",
    "crates/markdown",
    "crates/python",
    "crates/piptable-wasm",
    "crates/pdf",
    "crates/piptable-primitives",
    "crates/piptable-formulas",
    "crates/piptable-utils",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/bwalkt/piptable"
authors = ["piptable contributors"]

[workspace.dependencies]
# Benchmarking
criterion = "0.5"

# Async runtime
tokio = { version = "1", features = ["full"] }

# SQL Engine
datafusion = "44"
arrow = { version = "53", features = ["prettyprint"] }

# Parser
pest = "2.7"
pest_derive = "2.7"

# HTTP client
reqwest = { version = "0.12", features = ["json", "http2"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Web server
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
indexmap = { version = "2", features = ["serde"] }
async-trait = "0.1"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
colored = "2"
rustyline = "14"

# Export formats
rust_xlsxwriter = "0.79"
calamine = "0.26"
csv = "1.3"
parquet = "53"

# HTML parsing
scraper = "0.22" # TODO: Update to 0.25 - currently blocked by Python linking issues

# Testing
wiremock = "0.6"
tempfile = "3"

# Python bindings
pyo3 = { version = "0.23" }

# Internal crates
piptable-core = { path = "crates/core" }
piptable-parser = { path = "crates/parser" }
piptable-sql = { path = "crates/sql" }
piptable-http = { path = "crates/http" }
piptable-interpreter = { path = "crates/interpreter" }
piptable-viz = { path = "crates/viz" }
piptable-sheet = { path = "crates/sheet" }
piptable-python = { path = "crates/python" }
piptable-pdf = { path = "crates/pdf" }
piptable-primitives = { path = "crates/piptable-primitives" }
piptable-formulas = { path = "crates/piptable-formulas" }

[workspace.lints.rust]
unsafe_code = "forbid"
unused_variables = "deny"
unused_imports = "warn"
dead_code = "warn"

[workspace.lints.clippy]
# Lint groups (lower priority = higher precedence)
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Allow common pedantic lints that are too strict for this project
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
module_name_repetitions = "allow"
doc_markdown = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
derivable_impls = "allow"
implicit_clone = "allow"
io_other_error = "allow"
similar_names = "allow"
too_many_lines = "allow"
struct_excessive_bools = "allow"
fn_params_excessive_bools = "allow"
needless_pass_by_value = "allow"
significant_drop_tightening = "allow"
redundant_closure = "allow"
redundant_closure_for_method_calls = "allow"
uninlined_format_args = "allow"
unnecessary_wraps = "allow"
match_same_arms = "allow"
map_unwrap_or = "allow"
unused_async = "allow"
single_match_else = "allow"
cast_possible_wrap = "allow"
unused_self = "allow"
case_sensitive_file_extension_comparisons = "allow"
wildcard_imports = "allow"
bool_to_int_with_if = "allow"
wrong_self_convention = "allow"
format_push_string = "allow"
needless_continue = "allow"
