[package]
name = "piptable-cli"
description = "Command-line interface for piptable"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "pip"
path = "src/main.rs"

[features]
default = []
python = ["piptable-interpreter/python"]

[dependencies]
piptable-core = { workspace = true }
piptable-parser = { workspace = true }
piptable-interpreter = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
colored = { workspace = true }
rustyline = { workspace = true }
arrow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
dirs = "5"

[lints]
workspace = true
