[package]
name = "piptable-core"
description = "Core types and utilities for piptable DSL"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
arrow = { workspace = true }
chrono = { workspace = true }
piptable-types = { path = "../piptable-types" }
piptable-sheet = { path = "../sheet" }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
