[package]
name = "piptable-http"
description = "HTTP/2 client for data fetching"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
piptable-core = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
arrow = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
