[package]
name = "piptable-interpreter"
description = "Interpreter for piptable DSL"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
piptable-core = { workspace = true }
piptable-parser = { workspace = true }
piptable-sql = { workspace = true }
piptable-http = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
arrow = { workspace = true }
async-recursion = "1"

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
