[package]
name = "piptable-interpreter"
description = "Interpreter for piptable DSL"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = []
python = ["pyo3"]

[dependencies]
piptable-core = { workspace = true }
piptable-parser = { workspace = true }
piptable-sql = { workspace = true }
piptable-http = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
arrow = { workspace = true }
async-recursion = "1"
pyo3 = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
wiremock = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
