[package]
name = "piptable-interpreter"
description = "Interpreter for piptable DSL"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = []
python = ["pyo3"]

[dependencies]
piptable-core = { workspace = true }
piptable-parser = { workspace = true }
piptable-sheet = { workspace = true }
piptable-formulas = { workspace = true }
piptable-primitives = { workspace = true }
piptable-utils = { workspace = true }
indexmap = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
arrow = { workspace = true }
async-recursion = "1"
pyo3 = { workspace = true, optional = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
wiremock = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
rust_xlsxwriter = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
piptable-sql = { workspace = true }
piptable-http = { workspace = true }
piptable-pdf = { workspace = true }
piptable-markdown = { workspace = true }
tokio = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1", default-features = false, features = ["rt", "sync", "macros"] }

[lints]
workspace = true
