[package]
name = "piptable-markdown"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
comrak = { version = "0.28", default-features = false }
piptable-sheet = { path = "../sheet" }
thiserror = { workspace = true }
