[package]
name = "piptable-pdf"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
# Core dependencies
piptable-sheet = { path = "../sheet" }
thiserror = { workspace = true }
anyhow = { workspace = true }

# PDF processing
lopdf = "0.39"

# OCR support (Phase 1B)
tesseract = "0.15"
image = "0.25"
pdfium-render = "0.8"

# Text processing
regex = "1.11"
lazy_static = "1.5"

# Utilities
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }