[package]
name = "piptable-primitives"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
rmp-serde = { version = "1.1", optional = true }
piptable-core = { path = "../core" }

[features]
default = ["toon"]
toon = ["rmp-serde"]

[dev-dependencies]
piptable-sheet = { path = "../sheet" }
