[package]
name = "piptable-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
rmp-serde = "1.1"  # MessagePack for TOON implementation

# Internal dependencies
piptable-core = { path = "../core" }
piptable-parser = { path = "../parser" }
piptable-primitives = { path = "../piptable-primitives" }
piptable-formulas = { path = "../piptable-formulas" }
piptable-utils = { path = "../piptable-utils" }

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true