[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "piptable"
version = "0.1.0"
description = "A pyexcel-like library for working with tabular data (CSV, Excel)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries",
]
keywords = ["excel", "csv", "spreadsheet", "data", "tabular"]

[project.urls]
Homepage = "https://github.com/bwalkt/piptable"
Repository = "https://github.com/bwalkt/piptable"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "piptable"
