[package]
name = "piptable-server"
description = "HTTP server for piptable API"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "piptable-server"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
tower = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
