[package]
name = "piptable-sheet"
description = "Sheet/Book module with pyexcel-like API for piptable"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
csv = { workspace = true }
calamine = { workspace = true }
rust_xlsxwriter = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
indexmap = { workspace = true }
arrow = { workspace = true }
parquet = { workspace = true }
scraper = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
