[package]
name = "piptable-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
piptable-primitives = { path = "../primitives" }
piptable-formatting = { path = "../formatting" }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
