[package]
name = "piptable-viz"
description = "Visualization and chart generation for piptable"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
piptable-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
arrow = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
